# InteractiveShell

./: .gitignore  .travis.yml  Beginning.html  DocConverter.m2  Dockerfile  EventSourceEmulation.js  InstallOnVirtualBox.txt  Makefile  README  README-daemonize  Readme-AmazonWebServices.md  Readme-server-architecture.md  Readme.md  SingularLocalServer.js  TODO  TODO.md  ToDoList  Vagrantfile  Vagrantfile_aws  Vagrantfile_user  appspec.yml  bottom-extruder.html  chatclient.html  chatserver.js  cleanup.pl  configuring_linux.tex  configuring_ubuntu.tex  converter.rb  converterNotes.txt  create_user.pl  exemple_full.html  extr.test.html  get-shared.m2  getResults.php  icms2014.txt  index-franzi.html  index-ipad.html  index-mike.html  index-webnotes.html  index-wipetouch.html  (+56 more)
schroot-source/: .gitignore  AUTHORS  COPYING  HACKING  Makefile.am  NEWS  README  THANKS  TODO  bootstrap  configure.ac
schroot-source/contrib/setup.d/: 05customdir  09fsck  10mount-ssh  Makefile.am
schroot-source/debian/: .gitignore  changelog  changelog.TODO  control  copyright  dchroot-dsa.NEWS  dchroot-dsa.install.in  dchroot-dsa.lintian-overrides  dchroot-dsa.postrm  dchroot-dsa.preinst  dchroot.NEWS  dchroot.install.in  dchroot.lintian-overrides  dchroot.postrm  dchroot.preinst  libsbuild-1.7.0.install.in  libsbuild-dev.install.in  libsbuild-doc.doc-base  libsbuild-doc.docs  libsbuild1.install.in  rules  schroot-common.install.in  schroot.NEWS  schroot.README.Debian  schroot.default  schroot.docs  schroot.init  schroot.install.in  schroot.lintian-overrides  schroot.postinst  schroot.postrm  schroot.preinst
schroot-source/doc/: .gitignore  Makefile.am  REQUIREMENTS  sbuild.dox.in  schroot.dox.in
schroot-source/doc/historical/: Makefile.am  sbuild-chroot-helper.c
schroot-source/etc/: .gitignore  Makefile.am  genprofile  schroot.conf
schroot-source/etc/bash_completion/: Makefile.am  schroot
schroot-source/etc/pam/: Makefile.am  schroot
schroot-source/etc/profile-templates/all/all/: fstab
schroot-source/etc/profile-templates/all/freebsd/: fstab
schroot-source/etc/profile-templates/all/linux/: fstab
schroot-source/etc/profile-templates/buildd/all/: copyfiles
schroot-source/etc/profile-templates/buildd/freebsd/: fstab
schroot-source/etc/profile-templates/default/all/: nssdatabases
schroot-source/etc/profile-templates/default/freebsd/: fstab
schroot-source/etc/profile-templates/default/linux/: fstab
schroot-source/etc/profile-templates/desktop/freebsd/: fstab
schroot-source/etc/profile-templates/desktop/linux/: fstab
schroot-source/etc/profile-templates/sbuild/freebsd/: fstab
schroot-source/etc/profile-templates/sbuild/linux/: fstab
schroot-source/etc/setup.d/: 00check  05btrfs  05file  05lvm  05union  10mount  15binfmt  15killprocs  20copyfiles  20nssdatabases  50chrootname  60unshare  70services  Makefile.am  common-config  common-data  common-functions
schroot-source/lib/bin-common/: Makefile.am  main.cc  main.h  option-action.cc  option-action.h  options.cc  options.h  run.h
schroot-source/lib/dchroot-common/: Makefile.am  main.cc  main.h  session.cc  session.h
schroot-source/lib/sbuild/: .gitignore  Makefile.am  config.h.in  ctty.cc  ctty.h  custom-error.h  environment.cc  environment.h  error.h  error.tcc  fdstream.h  feature.cc  feature.h  format-detail.cc  format-detail.h  i18n.h  keyfile-reader.cc  keyfile-reader.h  keyfile-writer.cc  keyfile-writer.h  keyfile.cc  keyfile.h  lock.cc  lock.h  log.cc  log.h  mntstream.cc  mntstream.h  nostream.cc  nostream.h  parse-error.h  parse-value.cc  parse-value.h  personality.cc  personality.h  regex.h  run-parts.cc  run-parts.h  sbuild.pc.in  session.cc  (+5 more)
schroot-source/lib/sbuild/auth/: auth.cc  auth.h  deny.cc  deny.h  pam-conv-tty.cc  pam-conv-tty.h  pam-conv.cc  pam-conv.h  pam-message.cc  pam-message.h  pam.cc  pam.h
schroot-source/lib/sbuild/chroot/: chroot.cc  chroot.h  config.cc  config.h
schroot-source/lib/sbuild/chroot/facet/: block-device-base.cc  block-device-base.h  block-device.cc  block-device.h  btrfs-snapshot.cc  btrfs-snapshot.h  custom.cc  custom.h  directory-base.cc  directory-base.h  directory.cc  directory.h  facet.cc  facet.h  factory.cc  factory.h  file.cc  file.h  fsunion.cc  fsunion.h  loopback.cc  loopback.h  lvm-snapshot.cc  lvm-snapshot.h  mountable.cc  mountable.h  personality.cc  personality.h  plain.cc  plain.h  session-clonable.cc  (+17 more)
schroot-source/lib/schroot-common/: Makefile.am  main.cc  main.h  options.cc  options.h
schroot-source/lib/test/: Makefile.am  testmain.cc
schroot-source/libexec/listmounts/: .gitignore  Makefile.am  listmounts.cc  main.cc  main.h  options.cc  options.h
schroot-source/libexec/mount/: Makefile.am  main.cc  main.h  mount.cc  options.cc  options.h
schroot-source/man/: .gitignore  Makefile.am  authors.man  copyright.man  dchroot-dsa.1.man  dchroot.1.man  po4a.cfg  schroot-faq.7.man  schroot-script-config.5.man  schroot-setup.5.man  schroot.1.man  schroot.conf.5.man
schroot-source/man/add/: addendum.template  fr.add
schroot-source/man/po/: de.po  fr.po  schroot-man.pot
schroot-source/po/: .gitignore  LINGUAS  Makevars  POTFILES.in  cs.po  da.po  de.po  en.po  eu.po  fr.po  it.po  pt.po  schroot.pot  sv.po  vi.po  zh_CN.po
schroot-source/scripts/: .gitignore  git-dist.mk  git-tag-release  git-version  global.mk  po-notify.in  setperms
schroot-source/test/: .gitignore  Makefile.am  cleanup-test-data  config-directory-deprecated.ex  config-directory-fail.ex  config-directory-valid.ex  config.ex1  keyfile.ex1  setup-test-data
schroot-source/test/bin-common/: option-action.cc
schroot-source/test/config.ex2/: empty  experimental  file  sarge  sid  woody
schroot-source/test/run-parts.ex1/: 10test1  20test2  30test3
schroot-source/test/sbuild/: environment.cc  keyfile.cc  lock.cc  log.cc  nostream.cc  parse-value.cc  personality.cc  regex.cc  run-parts.cc  util.cc
schroot-source/test/sbuild/chroot/: block-device.cc  btrfs-snapshot.cc  chroot.cc  chroot.h  config.cc  custom.cc  directory.cc  file.cc  loopback.cc  lvm-snapshot.cc  plain.cc
(+282 files in other folders)
